Safari should not render a cell if the <td> is empty https://bugs.webkit.org/show_bug.cgi?id=15273

Patch by Gurpreet Kaur <k.gurpreet@samsung.com> on 2014-03-17
Reviewed by Darin Adler.

Source/WebCore:

When table cell has no children and the doctype is not present or not
correct the border for that cell should not be drawn. Firefox also
follows the same behaviour hence making the changes to make it similiar
to Firefox behaviour.

Tests: fast/table/table-cell-border-doctype.html
       fast/table/table-cell-border-no-doctype.html

* rendering/RenderTableCell.cpp:
(WebCore::RenderTableCell::paintBoxDecorations):
Added condition for not drawing the border when table cell has no child
and doctype.

LayoutTests:

* fast/table/table-cell-border-doctype-expected.html: Added.
* fast/table/table-cell-border-doctype.html: Added.
* fast/table/table-cell-border-no-doctype-expected.html: Added.
* fast/table/table-cell-border-no-doctype.html: Added.
Added new test cases to check the behaviour of table cell border when
table has doctype/no doctype and table cell has child/nochild.

Canonical link: https://commits.webkit.org/148321@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165740 268f45cc-cd09-0410-ab3c-d52691b4dbfc